// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattedAmountWithFiatValue.vue [Fiat FontSizeRate Medium]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="medium"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [Fiat FontWeightRate Medium]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="medium"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [Fiat Format as Value Format Medium]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="medium"
    fontweightrate="medium"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="medium"
    fontweightrate="medium"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [FontSizeRate Small]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="small"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [FontWeightRate Small]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="small"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [Has not Fiat Value]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <!---->
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [Symbol In Decimal Container]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol="XOR"
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    symbolasdecimal="true"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [Value and Fiat value only, can be hidden]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
    valuecanbehidden="true"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
    valuecanbehidden="true"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [Value and Fiat value only]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [Value only, can be hidden]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
    valuecanbehidden="true"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value=""
    valuecanbehidden="true"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [Value only]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value=""
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [With Empty Value]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value=""
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value=""
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [With Left Shift for Fiat]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
    withleftshift="true"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [With asset symbol]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol="XOR"
    class=""
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue [With value class]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
>
  <formatted-amount-stub
    assetsymbol=""
    class="formatted-amount--test"
    fontsizerate="normal"
    fontweightrate="normal"
    value="1,234,567.890123"
  />
   
  <formatted-amount-stub
    assetsymbol=""
    fontsizerate="normal"
    fontweightrate="normal"
    isfiatvalue="true"
    value="1,234,567.890123"
  />
</div>
`;
